--- a/OauthLiveImplicit/index.html
+++ b/OauthLiveImplicit/index.html
@@ -45,7 +45,7 @@
 </head>
 
 <body>
-  <div id="access_request">
+  <div>
     <h2>Forsøg med Microsofts Live API: OAuth 2.0 Implicit grant flow</h2>
 
     <p>Lad os få din Hotmail profil:</p>
