Google Web Client Application

--- a/GoogleWebServer/index.html
+++ b/GoogleWebServer/index.html
@@ -11,7 +11,7 @@
     });
 
     function makeLink() {
-      var clientId = '185454440685.apps.googleusercontent.com';
+      var clientId = '185454440685-bokakjjjoihcgsmkli72f921hur05fp4.apps.googleusercontent.com';
       var authorizationUrlBase = 'https://accounts.google.com/o/oauth2/auth';
       var redirectUri = 'http://oauth.jordal.dk/oauthgooglewebserverapplication/oauth2callback.ashx';
       var scope = 'https://www.googleapis.com/auth/drive';
@@ -28,7 +28,7 @@
 
 <body>
   <div>
-    <h2>Forsøg med Google Web Server: OAuth 2.0 Authorization code grant flow</h2>
+    <h2>Forsøg med Google Web Server Application: OAuth 2.0 Authorization code grant flow</h2>
 
     <a id="link">Lad os få Google profil:</a>
 
