--- a/GoogleWebServer/index.html
+++ b/GoogleWebServer/index.html
@@ -11,7 +11,7 @@
     });
 
     function makeLink() {
-      var clientId = '185454440685-bokakjjjoihcgsmkli72f921hur05fp4.apps.googleusercontent.com';
+      var clientId = '185454440685.apps.googleusercontent.com';
       var authorizationUrlBase = 'https://accounts.google.com/o/oauth2/auth';
       var redirectUri = 'http://oauth.jordal.dk/oauthgooglewebserverapplication/oauth2callback.ashx';
       var scope = 'https://www.googleapis.com/auth/drive';
